tests/negative/runtime/logic_bomb_or.stream
// EXPECT: Runtime Error
// false || (CRASH) -> Should Crash
if false || (1 / 0 == 0) {
    print("Should not be here");
}